[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
categories = ["config", "command-line-utilities"]
description = "A blazingly fast configuration management library"
documentation = "https://docs.rs/realize"
homepage = "https://github.com/dflemstr/realize"
keywords = ["configuration", "administration"]
license = "Apache-2.0"
name = "realize"
readme = "README.md"
repository = "https://github.com/dflemstr/realize"
version = "0.1.0"

[dependencies]
error-chain = "0.10.0"
linked-hash-map = "0.4.2"
sha1 = "0.2.0"
slog-async = "2"
slog-journald = "2"
slog-term = "2"

[dependencies.slog]
features = ["release_max_level_trace", "max_level_trace"]
version = "2"
